--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,24 +3,24 @@ server.port=80
 
 ##Mysql ?? ??
 #??????? ???? ?? mysql jdbc driver??
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver 
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #??? ??????? URL, ????, ??????? ??? ??
 spring.datasource.url=jdbc:mysql://localhost:3306/shop?serverTimezone=UTC
 #???, ????
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=mysql
 
 #???? ?? ?? ??
 spring.jpa.properties.hibernate.show_sql=true
 
 #???? ???? ??? ??? ?? ???
-logging.level.org.hibernate.format_sql=true
+logging.level.org.hibernate.format_sql=trace
 
 #??? ???? ???? ??? ???? ??
 logging.level.org.hibernate.type.descriptor.sql=trace
 
 #
-#??? ??? ?? ??
+#database init
 spring.jpa.hibernate.ddl-auto=create
-#Dialect(??) ??
-spring.jpa,database-platform=org.hibernate.dialect.MySQL5Dialect
+#Dialect setting
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
