--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,9 @@ logging.level.org.hibernate.type.descriptor.sql=trace
 spring.jpa.hibernate.ddl-auto=create
 #Dialect setting
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+#Live-Reload
+spring.devtools.livereload.enabled=true
+
+#Thymeleaf cache
+spring.thymeleaf.cache = false
