--- a/shop/src/main/resources/application-test.properties
+++ b/shop/src/main/resources/application-test.properties
@@ -6,3 +6,5 @@ spring.datasource.password=rhwlsrkafo
 
 # H2 ??????????
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create
+
