--- a/shop/src/main/resources/application.properties
+++ b/shop/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.jpa.properties.hibernate.format_sql=true
 # ??? ???? ???? ??? ???? ??
 logging.level.org.hibernate.type.descriptor.sql=trace
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 # Live Reload ?? ???
@@ -23,3 +23,15 @@ spring.devtools.livereload.enabled=true
 
 # Thymeleaf cache ?? ??
 spring.thymeleaf.cache=false
+
+# ?? ?? ?? ???
+spring.servlet.multipart.max-file-size=20MB
+
+# ??? ?? ?? ??
+spring.servlet.multipart.max-request-size=100MB
+
+# ?? ??? ??? ??
+itemImgLocation=/Users/jungmin/Desktop/LikeLion11th/likelion11th-be-springboot-study/shop/src/main/resources/static/images
+
+# ??? ??? ??
+uploadPath=file:////Users/jungmin/Desktop/LikeLion11th/likelion11th-be-springboot-study/shop
