--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,7 +21,9 @@ logging.level.org.hibernate.type.descriptor.sql=trace
 
 #
 #database init
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.generate-ddl=true
 #Dialect setting
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
