feat: Shopping-mall proj. ch7

--- a/shop/src/main/resources/application.properties
+++ b/shop/src/main/resources/application.properties
@@ -35,3 +35,6 @@ itemImgLocation=/Users/jungmin/Desktop/LikeLion11th/likelion11th-be-springboot-s
 
 # ??? ??? ??
 uploadPath=file:////Users/jungmin/Desktop/LikeLion11th/likelion11th-be-springboot-study/shop
+
+#?? batch size ??
+spring.jpa.properties.hibernate.default_batch_fetch_size=1000
