--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,7 +21,7 @@ logging.level.org.hibernate.type.descriptor.sql=trace
 
 #
 #database init
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 
 spring.jpa.generate-ddl=true
 #Dialect setting
@@ -32,3 +32,12 @@ spring.devtools.livereload.enabled=true
 
 #Thymeleaf cache
 spring.thymeleaf.cache = false
+
+#image
+spring.servlet.multipart.maxFileSize=20MB
+
+spring.servlet.multipart.maxRequestSize=100MB
+
+itemImgLocation=C:/shop/item
+
+uploadPath=file:///C:/shop/
